=Added license files for file stream examples.  Removed low level example

--- a/NAVdisplayPlugins/DisplayDataStore/DisplayDataStoreStreamInfo.csproj
+++ b/NAVdisplayPlugins/DisplayDataStore/DisplayDataStoreStreamInfo.csproj
@@ -68,6 +68,7 @@
     <Compile Include="DisplayDatastoreStreamInfo.Designer.cs">
       <DependentUpon>DisplayDatastoreStreamInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="DisplayDataStoreStreamInfoSerialiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
