--- a/FileBasedStreams/DecodingFileData/DecodingFileData.csproj
+++ b/FileBasedStreams/DecodingFileData/DecodingFileData.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EmbeddedResource Include="NAVlib.lic" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
